tests/typescript/neg/simple/parse-01.ts

/*@ c :: string */
var c = 1;

/*@ e :: [string] */
var e = "aaa";

